@@ -1,38 +1,38 @@
-/* 
+/*
    default text styles - background and colors overriden by
    album 'bgcolor', 'background', and 'textcolor' properties.
 */
 /*
   $Id$
- 
+
   Gallery - a web based photo album viewer and editor
   Copyright (C) 2000-2006 Bharat Mediratta
- 
+
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation; either version 2 of the License, or (at
   your option) any later version.
- 
+
   This program is distributed in the hope that it will be useful, but
   WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
   General Public License for more details.
- 
+
   You should have received a copy of the GNU General Public License
   along with this program; if not, write to the Free Software
   Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
 
-*/ 
+*/
 
 textarea:focus, input:focus, select:focus {
     background-color: #FFFFDA;
 }
 
-.commentbox	{ 
+.commentbox	{
     border-width:1px; border-style:solid; border-color: #000000;
     padding:2px;
 }
-		
+
 .commentboxhead	{ background-color: #FCFCF3; padding:2px;
 		  border-bottom-width:1px; border-bottom-style: solid; border-color: #000000;
 		  font-size:10pt;
@@ -42,7 +42,7 @@ textarea:focus, input:focus, select:focus {
 		  font-size:10pt;
 		}
 
-.commentboxfooter { 
+.commentboxfooter {
 	background-color: #FCFCF3; padding:2px;
 	border-top-width:1px; border-top-style: solid; border-color: #000000;
 	font-size:10pt;
@@ -59,28 +59,28 @@ textarea:focus, input:focus, select:focus {
 .shortdesc	{ background-color: #DCDCC0; padding:5px; font-weight: bold;
 		}
 
-body	{ 
+body	{
 	  color: #000000;
 	  font-family: Verdana, Arial, Helvetica, sans-serif;
 	  background-image: url(../images/simplex-bkg.gif);
 	}
 
-a:link, a:visited { 
+a:link, a:visited {
 	color: #000000;
 		}
 
-a:hover { 
+a:hover {
     color: #000099;
     text-decoration: none;
 }
 
-/* 
-   text styles 
+/*
+   text styles
 */
 .title                          /* album titles on main page */
-	{ 
-	  font-size: 14px; 
-	  font-weight: bold; 
+	{
+	  font-size: 14px;
+	  font-weight: bold;
 	}
 
 .mod_title			/* album title -- Text is controlled by .title */
@@ -98,17 +98,17 @@ a:hover {
 
 .desc	{ background-color: #FCFCF3 ; padding:3px; margin:8px; font-size:1.0em;
 	  width:80%;
-	  border-style: solid; border-color: #000000; 
+	  border-style: solid; border-color: #000000;
 	  border-width:1px; -Moz-Border-Radius: 20px;
 	}
 
 .caption                        /* photo captions on all pages */
-	{ 
-	  font-size: 10px; 
+	{
+	  font-size: 10px;
 	}
 .modcaption  /* modifies background for caption text to reside */
 	{
-	  font-size: 10px; 
+	  font-size: 10px;
 	}
 
 .error {
@@ -132,30 +132,30 @@ a.error, a.error:link, a.error:visited, a.error:active {
 
 /*
 .warning        { font-weight:bold; background-color: #FFFF33; color: #000000 ;
-		  width: 150px; padding:2px; 
+		  width: 150px; padding:2px;
 		}
 */
 
-.headbox { 
+.headbox {
 	  background-color: #E6E6DC; font-size: 1.5em;  font-weight:bold; padding:10px;
 	  border-style: solid; border-width: 1px; border-color: #F0F0F0;
 	}
 
 .head                           /* page headers */
-	{ 
-	  font-size: 16px; 
-	  font-weight: bold; 
+	{
+	  font-size: 16px;
+	  font-weight: bold;
 	}
 
 .bread                          /* used in breadcrumb bars */
-	{ 
-	  font-size: 10px; 
+	{
+	  font-size: 10px;
 	}
 .nav                            /* used in navigation bars */
-	{ 
-	  font-size: 12px; 
+	{
+	  font-size: 12px;
 	}
-	
+
 .navtableborderbegin{
 	border:1px solid #000000;
 }
@@ -194,7 +194,7 @@ a.error, a.error:link, a.error:visited, a.error:active {
 	}
 
 input, select, option, textarea
-	{ 
+	{
 	  background-color: #FCFCFF; padding-left:5px; -Moz-Border-Radius: 20px;
 	}
 
@@ -205,22 +205,22 @@ input, select, option, textarea
 	}
 
 .admin                          /* used in admin bars */
-	{ 
-	  font-size: 10px; 
-	  font-weight: bold; 
+	{
+	  font-size: 10px;
+	  font-weight: bold;
 }
 
-.adminform { 
-    font-size: 10px; 
-    font-weight: bold; 
+.adminform {
+    font-size: 10px;
+    font-weight: bold;
 }
 
 .search                          /* used in search text */
-	{ 
-	  font-size: 10px; 
+	{
+	  font-size: 10px;
 	  font-weight: bold;
 	}
-	
+
 /* controls the background of popup. */
 .popupbody {
     margin: 5px;
@@ -228,7 +228,7 @@ input, select, option, textarea
     font-size: 12px;
  }
 
-.popuphead { 
+.popuphead {
     font-size: 16px; font-weight: bold;
     text-align: center;
     background-color: #FCFCF3;
@@ -256,29 +256,29 @@ input, select, option, textarea
  }
 
 .pcaption /* brackets all text below photo */
-{ 
+{
 	padding:2px;
 	margin-top:2px;
  }
 
 .vatable /* width of the div set for all photo sets - view albums  */
- { 
+ {
  	width: 100%;
  }
 
 .vathumbs /* full background bracket for images and text - veiw albums  */
- { 
+ {
 	margin:17px;
  }
 
 .vafloat /* float for view album - text */
  {
-	float: none; 
+	float: none;
  }
 
 .vafloat2 /* float for view album - images */
  {
-	float: none; 
+	float: none;
  }
 
 .vasummary /* controls the view of Album summary */
@@ -331,7 +331,6 @@ input, select, option, textarea
 
 .noLink {
     font-size: 10px;
-//	padding: 3px;
 }
 
 .debugmessage {
